* new previousRowDataVar attribute in extended HtmlDataTable (see tld description)
* Japanese translation
* fixed problems with nested UIData and HtmlDataTable components
* writeText method in default ResponseWriter now maps newlines to <br/> and
  successive spaces to &nbsp; entities
* corrected some problems with rowIndexVar and rowCountVar in HtmlDataList
* extended HtmlDataTable now also supports rowIndexVar and rowCountVar 
* bug #998464 request charset handling is invalid
* bug #1001511 fileupload compponent don't support setHeaderEncoding
* bug #1008043 applied patch for ServletExternalContextImpl by Takashi Okamoto
* fixed StackOverflow in ClassUtils and cleaned up ClassUtils methods
* full revision of extended HtmlDataTable so that there is no more cache problem
* HtmlCommandSortHeader now supports immediate attribute
* bug fix: No decode for spread checkbox or radio
* bug fix: NPE in MessageUtils when there was no ViewRoot
* bug #1012909 support Oracle ADF
* bug #1007065 f:view should tokenize locale attribute
* bug #1013489 support EL expression at <f:loadBundle>
* Tiles support: ServletContextListener (JspTilesViewHandlerInitializer) no longer needed
* outputText (and other components) needed to render a span-tag if they have a custom-set id
* required HtmlInputFileUpload validates now correctly
  (and shows a message) if submitted value exists and the value is empty

----------------------------------------------------------------------
Changes in Release 1.0.6 beta
* switch to apache license
* new JspTilesViewHandler for flawless Tiles support
* RFE #975649 Enhance HtmlTabbedPaneRenderer (rendered attribute for TabbedPane component)
* RFE #990814 dataList component ignores styleClass attribute
* bug #1004867 h:message has duplicate attributes
* bug #1004896 h:dataTable id attribute not rendered
* bug #995085 graphicImage ignores value attribute
* bug #992668 selectOneMenu doesn't restore the bean value if it's a primitive