@@ -1,0 +1,3 @@
+# patch file
+patchfile = ${env.TEMP}/patchfile.diff
+patchdir = ${project.dir}
